Fixed issue with model metrics

--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -3701,7 +3701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 199,
    "id": "8c05a7e1",
    "metadata": {},
    "outputs": [],
@@ -4411,7 +4411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 159,
    "id": "ba7da291",
    "metadata": {},
    "outputs": [],
@@ -4433,7 +4433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 160,
    "id": "0817a25e-8224-4911-830b-d659e7458b4a",
    "metadata": {
     "tags": []
@@ -4443,7 +4443,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An error occurred (ValidationError) when calling the InvokeEndpoint operation: Endpoint penguins-endpoint of account 325223348818 not found.\n"
+      "{\n",
+      "  \"predictions\": [\n",
+      "    [\n",
+      "      0.124825425,\n",
+      "      0.0847824216,\n",
+      "      0.79039216\n",
+      "    ],\n",
+      "    [\n",
+      "      0.766525269,\n",
+      "      0.220783874,\n",
+      "      0.0126908608\n",
+      "    ],\n",
+      "    [\n",
+      "      0.944253445,\n",
+      "      0.0292692278,\n",
+      "      0.0264772158\n",
+      "    ]\n",
+      "  ]\n",
+      "}\n",
+      "\n",
+      "Species: [2 0 0]\n"
      ]
     }
    ],
@@ -4742,7 +4762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 154,
    "id": "4a742974",
    "metadata": {
     "tags": [
@@ -4753,13 +4773,13 @@
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '430ab54f-c8c6-4852-a5e8-42669f8acd34',\n",
+       "{'ResponseMetadata': {'RequestId': 'd4486435-ef58-44e5-a4ec-0fe5c5e80aed',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Thu, 28 Mar 2024 15:46:13 GMT',\n",
+       "  'HTTPHeaders': {'date': 'Fri, 29 Mar 2024 16:05:03 GMT',\n",
        "   'content-type': 'application/json',\n",
        "   'content-length': '1593',\n",
        "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': '430ab54f-c8c6-4852-a5e8-42669f8acd34'},\n",
+       "   'x-amzn-requestid': 'd4486435-ef58-44e5-a4ec-0fe5c5e80aed'},\n",
        "  'RetryAttempts': 0},\n",
        " 'FunctionName': 'deployment_fn',\n",
        " 'FunctionArn': 'arn:aws:lambda:us-east-1:325223348818:function:deployment_fn',\n",
@@ -4770,7 +4790,7 @@
        " 'Description': '',\n",
        " 'Timeout': 600,\n",
        " 'MemorySize': 128,\n",
-       " 'LastModified': '2024-03-28T15:46:13.000+0000',\n",
+       " 'LastModified': '2024-03-29T16:05:03.000+0000',\n",
        " 'CodeSha256': 'l4kFNMlylzvLEXPozhpRDuhWg63kP9XVkBfx+Ib9ZrY=',\n",
        " 'Version': '$LATEST',\n",
        " 'Environment': {'Variables': {'ROLE': 'arn:aws:iam::325223348818:role/service-role/AmazonSageMaker-ExecutionRole-20230312T160501',\n",
@@ -4778,7 +4798,7 @@
        "   'DATA_CAPTURE_DESTINATION': 's3://mlschool/penguins/monitoring/data-capture',\n",
        "   'ENDPOINT': 'penguins-endpoint'}},\n",
        " 'TracingConfig': {'Mode': 'PassThrough'},\n",
-       " 'RevisionId': 'ff10a1f2-a975-446d-8881-64493cbe5444',\n",
+       " 'RevisionId': '0d400944-0930-4ddf-a318-fa53bf087756',\n",
        " 'Layers': [],\n",
        " 'State': 'Active',\n",
        " 'LastUpdateStatus': 'InProgress',\n",
@@ -4793,7 +4813,7 @@
        "  'LogGroup': '/aws/lambda/deployment_fn'}}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4967,7 +4987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 163,
    "id": "1dd5bb33",
    "metadata": {},
    "outputs": [
@@ -4975,7 +4995,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiter EndpointInService failed: Waiter encountered a terminal failure state: Matched expected service error code: ValidationException\n"
+      "{\n",
+      "  \"predictions\": [\n",
+      "    [\n",
+      "      0.124825425,\n",
+      "      0.0847824216,\n",
+      "      0.79039216\n",
+      "    ],\n",
+      "    [\n",
+      "      0.766525269,\n",
+      "      0.220783874,\n",
+      "      0.0126908608\n",
+      "    ],\n",
+      "    [\n",
+      "      0.944253445,\n",
+      "      0.0292692278,\n",
+      "      0.0264772158\n",
+      "    ]\n",
+      "  ]\n",
+      "}\n",
+      "\n",
+      "Species: [2 0 0]\n"
      ]
     }
    ],
@@ -4988,11 +5028,12 @@
     "try:\n",
     "    wait_for_endpoint()\n",
     "\n",
+    "    predictor = Predictor(endpoint_name=ENDPOINT)\n",
+    "\n",
     "    response = predictor.predict(payload, initial_args={\"ContentType\": \"text/csv\"})\n",
     "    response = json.loads(response.decode(\"utf-8\"))\n",
     "\n",
     "    print(json.dumps(response, indent=2))\n",
-    "    print(f\"\\nSpecies: {np.argmax(response['predictions'], axis=1)}\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ]
@@ -5023,7 +5064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 190,
    "id": "96751e71",
    "metadata": {},
    "outputs": [],
@@ -5043,7 +5084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 191,
    "id": "1ee4b9d5",
    "metadata": {},
    "outputs": [],
@@ -5070,7 +5111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 192,
    "id": "63f294bc",
    "metadata": {},
    "outputs": [],
@@ -5096,7 +5137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 193,
    "id": "9985bd49",
    "metadata": {},
    "outputs": [],
@@ -5124,7 +5165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 194,
    "id": "32302639",
    "metadata": {},
    "outputs": [
@@ -5164,14 +5205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 200,
    "id": "18adeb93",
    "metadata": {
     "tags": [
      "hide-output"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/svpino/dev/ml.school/.venv/lib/python3.10/site-packages/sagemaker/workflow/pipeline_context.py:332: UserWarning: Running within a PipelineSession, there will be No Wait, No Logs, and No Job being started.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "register_model_step = create_registration_step(\n",
     "    tensorflow_model,\n",
@@ -5192,7 +5242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 201,
    "id": "fafb5514",
    "metadata": {},
    "outputs": [],
@@ -5217,7 +5267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 202,
    "id": "b95c22b2",
    "metadata": {
     "tags": [
@@ -5242,16 +5292,16 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:325223348818:pipeline/session13-pipeline',\n",
-       " 'ResponseMetadata': {'RequestId': 'd0f78f5d-7380-4d67-8ba1-ecff76a8d29a',\n",
+       " 'ResponseMetadata': {'RequestId': 'd5f2ca63-6e11-40f2-a49e-84210bf01848',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'd0f78f5d-7380-4d67-8ba1-ecff76a8d29a',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'd5f2ca63-6e11-40f2-a49e-84210bf01848',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '86',\n",
-       "   'date': 'Thu, 28 Mar 2024 15:46:19 GMT'},\n",
+       "   'date': 'Fri, 29 Mar 2024 16:38:40 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7155,17 +7205,18 @@
    "source": [
     "from sagemaker.drift_check_baselines import DriftCheckBaselines\n",
     "\n",
-    "model_metrics.model_data_statistics = MetricsSource(\n",
-    "    s3_uri=data_quality_baseline_step.properties.CalculatedBaselineStatistics,\n",
-    "    content_type=\"application/json\",\n",
+    "data_quality_model_metrics = ModelMetrics(\n",
+    "    model_data_statistics=MetricsSource(\n",
+    "        s3_uri=data_quality_baseline_step.properties.CalculatedBaselineStatistics,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
+    "    model_data_constraints=MetricsSource(\n",
+    "        s3_uri=data_quality_baseline_step.properties.CalculatedBaselineConstraints,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
     ")\n",
     "\n",
-    "model_metrics.model_data_constraints = MetricsSource(\n",
-    "    s3_uri=data_quality_baseline_step.properties.CalculatedBaselineConstraints,\n",
-    "    content_type=\"application/json\",\n",
-    ")\n",
-    "\n",
-    "drift_check_baselines = DriftCheckBaselines(\n",
+    "data_quality_drift_check_baselines = DriftCheckBaselines(\n",
     "    model_data_statistics=MetricsSource(\n",
     "        s3_uri=data_quality_baseline_step.properties.BaselineUsedForDriftCheckStatistics,\n",
     "        content_type=\"application/json\",\n",
@@ -7203,8 +7254,8 @@
     "    PIPELINE_MODEL_PACKAGE_GROUP,\n",
     "    content_types=[\"text/csv\", \"application/json\"],\n",
     "    response_types=[\"text/csv\", \"application/json\"],\n",
-    "    model_metrics=model_metrics,\n",
-    "    drift_check_baselines=drift_check_baselines,\n",
+    "    model_metrics=data_quality_model_metrics,\n",
+    "    drift_check_baselines=data_quality_drift_check_baselines,\n",
     ")"
    ]
   },
@@ -7608,24 +7659,42 @@
    "source": [
     "from sagemaker.drift_check_baselines import DriftCheckBaselines\n",
     "\n",
-    "model_metrics.model_statistics = MetricsSource(\n",
-    "    s3_uri=model_quality_baseline_step.properties.CalculatedBaselineStatistics,\n",
-    "    content_type=\"application/json\",\n",
+    "model_quality_model_metrics = ModelMetrics(\n",
+    "    model_statistics=MetricsSource(\n",
+    "        s3_uri=model_quality_baseline_step.properties.CalculatedBaselineStatistics,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
+    "    model_constraints=MetricsSource(\n",
+    "        s3_uri=model_quality_baseline_step.properties.CalculatedBaselineConstraints,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
+    "    model_data_statistics=MetricsSource(\n",
+    "        s3_uri=data_quality_baseline_step.properties.CalculatedBaselineStatistics,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
+    "    model_data_constraints=MetricsSource(\n",
+    "        s3_uri=data_quality_baseline_step.properties.CalculatedBaselineConstraints,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
     ")\n",
     "\n",
-    "model_metrics.model_constraints = MetricsSource(\n",
-    "    s3_uri=model_quality_baseline_step.properties.CalculatedBaselineConstraints,\n",
-    "    content_type=\"application/json\",\n",
-    ")\n",
-    "\n",
-    "drift_check_baselines.model_statistics = MetricsSource(\n",
-    "    s3_uri=model_quality_baseline_step.properties.BaselineUsedForDriftCheckStatistics,\n",
-    "    content_type=\"application/json\",\n",
-    ")\n",
-    "\n",
-    "drift_check_baselines.model_constraints = MetricsSource(\n",
-    "    s3_uri=model_quality_baseline_step.properties.BaselineUsedForDriftCheckConstraints,\n",
-    "    content_type=\"application/json\",\n",
+    "model_quality_drift_check_baselines = DriftCheckBaselines(\n",
+    "    model_statistics=MetricsSource(\n",
+    "        s3_uri=model_quality_baseline_step.properties.BaselineUsedForDriftCheckStatistics,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
+    "    model_constraints=MetricsSource(\n",
+    "        s3_uri=model_quality_baseline_step.properties.BaselineUsedForDriftCheckConstraints,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
+    "    model_data_statistics=MetricsSource(\n",
+    "        s3_uri=data_quality_baseline_step.properties.BaselineUsedForDriftCheckStatistics,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
+    "    model_data_constraints=MetricsSource(\n",
+    "        s3_uri=data_quality_baseline_step.properties.BaselineUsedForDriftCheckConstraints,\n",
+    "        content_type=\"application/json\",\n",
+    "    ),\n",
     ")"
    ]
   },
@@ -7655,8 +7724,8 @@
     "    PIPELINE_MODEL_PACKAGE_GROUP,\n",
     "    content_types=[\"text/csv\", \"application/json\"],\n",
     "    response_types=[\"text/csv\", \"application/json\"],\n",
-    "    model_metrics=model_metrics,\n",
-    "    drift_check_baselines=drift_check_baselines,\n",
+    "    model_metrics=model_quality_model_metrics,\n",
+    "    drift_check_baselines=model_quality_drift_check_baselines,\n",
     ")"
    ]
   },
@@ -8702,7 +8771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 206,
    "id": "59d1e634",
    "metadata": {
     "tags": [
@@ -8713,10 +8782,10 @@
     {
      "data": {
       "text/plain": [
-       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:325223348818:pipeline/session17-pipeline/execution/69zulyehahnk', sagemaker_session=<sagemaker.workflow.pipeline_context.PipelineSession object at 0x1084e3010>)"
+       "_PipelineExecution(arn='arn:aws:sagemaker:us-east-1:325223348818:pipeline/session13-pipeline/execution/8csg5fmzdfho', sagemaker_session=<sagemaker.workflow.pipeline_context.PipelineSession object at 0x1084e3010>)"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8725,7 +8794,7 @@
     "# %%script false --no-raise-error\n",
     "# | eval: false\n",
     "\n",
-    "session17_pipeline.start()"
+    "session13_pipeline.start()"
    ]
   },
   {
@@ -8798,7 +8867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 166,
    "id": "6b32c3a4-312e-473c-a217-33606f77d1e9",
    "metadata": {
     "tags": [
