Added payload to session 12

--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -5025,6 +5025,9 @@
     "    waiter.wait(EndpointName=ENDPOINT, WaiterConfig={\"Delay\": 10, \"MaxAttempts\": 30})\n",
     "\n",
     "\n",
+    "payload = \"0.6569590202313976,-1.0813829646495108,1.2097102831892812,0.9226343641317372,1.0,0.0,0.0\"\n",
+    "\n",
+    "\n",
     "try:\n",
     "    wait_for_endpoint()\n",
     "\n",
