Fixed session 14 diagrams

--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -5340,7 +5340,7 @@
     "\n",
     "Deploying the model we trained directly to an endpoint doesn't lets us control the data that goes in and comes out of the endpoint. The TensorFlow model we trained requires transformed data, which makes it useless to other applications:\n",
     "\n",
-    "<a href=\"images/prediction-service.png\" target=\"_blank\"> <img src=\"images/prediction-service.png\" alt=\"Prediction service\" style=\"max-width: 740px;\" /></a>\n",
+    "<a href=\"images/basic-model.png\" target=\"_blank\"> <img src=\"images/basic-model.png\" alt=\"Basic Model\" style=\"max-width: 740px;\" /></a>\n",
     "\n",
     "To fix this, we can create an Inference Pipeline using SageMaker to control the data that goes in and comes out of the endpoint.\n",
     "\n",
@@ -8892,7 +8892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 304,
    "id": "6b32c3a4-312e-473c-a217-33606f77d1e9",
    "metadata": {
     "tags": [
